drone-agent-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.10.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: drone-agent
  name: drone-agent
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: drone-agent
    spec:
      containers:
      - args:
        - agent
        image: drone/agent:0.8
        name: drone-agent
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: drone-agent-claim0
      restartPolicy: Always
      volumes:
      - name: drone-agent-claim0
        persistentVolumeClaim:
          claimName: drone-agent-claim0
status: {}
