drone-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: drone-server
  name: drone-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: drone-server
    spec:
      containers:
      - env:
        - name: DRONE_GITHUB
          value: "true"
        - name: DRONE_GITHUB_CLIENT
          valueFrom:
            secretKeyRef:
              name: literal-token
              key: DRONE_GITHUB_CLIENT
        - name: DRONE_GITHUB_SECRET
          valueFrom:
            secretKeyRef:
              name: literal-token
              key: DRONE_GITHUB_SECRET
        - name: DRONE_HOST
          value: "http://drone.abramsimon.com"
        - name: DRONE_OPEN
          value: "true"
        - name: DRONE_SECRET
          value: "change-me"
        image: drone/drone:0.8
        name: drone-server
        ports:
        - containerPort: 8000
        - containerPort: 9000
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/drone/
          name: drone-server-claim0
      restartPolicy: Always
      volumes:
      - name: drone-server-claim0
        persistentVolumeClaim:
          claimName: drone-server-claim0
status: {}
