drone-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.10.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: drone-agent
  name: drone-agent
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: drone-agent
status:
  loadBalancer: {}
