drone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    author: abramsimon
  labels:
    io.kompose.service: drone-server
  name: drone-server
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 8000
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: drone-server
status:
  loadBalancer: {}
